[gd_scene load_steps=2 format=3 uid="uid://vilhmyt1r7ty"]

[ext_resource type="Script" uid="uid://cqim7o4jkgccg" path="res://Screens/health_bar.gd" id="1_2evhp"]

[node name="HealthBar" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 180.0
offset_bottom = 64.0
script = ExtResource("1_2evhp")

[node name="WhiteBorder" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 2.0
offset_bottom = 8.0
scale = Vector2(30, 1)
color = Color(0.4371, 0.270989, 0.0160572, 1)

[node name="BlackBG" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 1.0
offset_right = 4.0
offset_bottom = 7.0
scale = Vector2(28, 1)
color = Color(0, 0, 0, 1)

[node name="HealthGauge" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 1.0
offset_right = 4.0
offset_bottom = 7.0
scale = Vector2(28, 1)
color = Color(0.548029, 0.00814568, 4.81308e-08, 1)
